--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Press Start 2P', cursive;
-/*   background-color: #333; */
+  background-color: #333;
 }
 
 canvas {
@@ -13,17 +13,24 @@ canvas {
 }
 
 h3{
+  margin: 5px 10px;
   color: gold;
   text-shadow: -2px 0px 1px rgba(0, 0, 0, 1);
 }
 
-p{  
+p{ 
+  margin: 5px 10px;
   font-size: 0.5rem;
   color: gold;
   text-shadow: -2px 0px 1px rgba(0, 0, 0, 1);
 }
 
 button{
+  padding: 5px;
+  font-size: 1rem;
+  font-family: 'Press Start 2P', cursive;
   color: gold;
   background-color: #333;
+  border: 1px solid gold;
+  text-shadow: -2px 0px 1px rgba(0, 0, 0, 1);
 }
